--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,9 @@ jobs:
         with:
           go-version: 1.20.5
 
+      - name: Install Go Mobile
+        run: go install golang.org/x/mobile/cmd/gomobile@latest
+
       - name: Checkout code
         uses: actions/checkout@v2
 
